Добавит оставшиеся секции

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["descr"]
+  "cSpell.words": [
+    "adipisicing",
+    "amet",
+    "consectetur",
+    "descr",
+    "iure",
+    "Praesentium",
+    "sociallink",
+    "swiper",
+    "videobtn"
+  ]
 }
